--- a/examples/general-example/three.tex
+++ b/examples/general-example/three.tex
@@ -6,7 +6,7 @@
           minimum width = 1.5cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,-1) {};
-    \node[] at (ms4.center) {ms2};
+    \node[] at (ms4.center) {\texttt{ms2}};
 
     \node[rectangle,
         draw,
@@ -14,7 +14,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (ms2) at (1,1) {};
-    \node[] at (ms2.center) {ms1};
+    \node[] at (ms2.center) {\texttt{ms1}};
 
 
     \node[rectangle,
@@ -23,7 +23,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (sys) at (-1,0) {};
-    \node[] at (sys.center) {c\_c1};
+    \node[] at (sys.center) {\texttt{c\_c1}};
 
     \node[rectangle,
         draw,
@@ -31,7 +31,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (c2) at (0,2) {};
-    \node[] at (c2.center) {c\_c2};
+    \node[] at (c2.center) {\texttt{c\_c2}};
 
     \node[rectangle,
         draw,
@@ -39,7 +39,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (vc) at (2,2) {};
-    \node[] at (vc.center) {c\_c3};
+    \node[] at (vc.center) {\texttt{c\_c3}};
 
     \node[rectangle,
         draw,
@@ -47,13 +47,13 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (r1) at (1,0) {};
-    \node[] at (r1.center) {r\_c2};
+    \node[] at (r1.center) {\texttt{r\_c2}};
 
     \node[rectangle,
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (0,-2) {};
-    \node[] at (label.center) {c};
+    \node[] at (label.center) {$c$};
 
 
     \path[every node/.style={font=\sffamily\small}]
