--- a/examples/general-example/two.tex
+++ b/examples/general-example/two.tex
@@ -6,7 +6,7 @@
           minimum width = 1.5cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {ms2};
+    \node[] at (ms4.center) {\texttt{ms2}};
 
     \node[rectangle,
         draw,
@@ -14,7 +14,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (ms2) at (1,2) {};
-    \node[] at (ms2.center) {ms1};
+    \node[] at (ms2.center) {\texttt{ms1}};
 
 
     \node[rectangle,
@@ -23,7 +23,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (sys) at (-1,1) {};
-    \node[] at (sys.center) {c\_c1};
+    \node[] at (sys.center) {\texttt{c\_c1}};
 
     \node[rectangle,
         draw,
@@ -31,13 +31,13 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (vc) at (1,1) {};
-    \node[] at (vc.center) {c\_c2};
+    \node[] at (vc.center) {\texttt{c\_c2}};
 
     \node[rectangle,
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (label) at (0,-1) {};
-    \node[] at (label.center) {b};
+    \node[] at (label.center) {$b$};
 
 
     \path[every node/.style={font=\sffamily\small}]
