--- a/fm24.tex
+++ b/fm24.tex
@@ -80,12 +80,11 @@ The abstract should briefly summarize the contents of the paper in
 %
 \section{Introduction}
 % \subsection{A Subsection Sample}
-A key facet of the negotiation routine is attestation protocol selection where selecting the best attestation protocol from among many poses a challenging problem. This difficulty could be attributed to situational nuances that impact an ordering and the variety of attestation scenarios that exist. To further complicate the problem, various dimensions for protocol analysis arise such as a protocol's complexity, its resource consumption, or its vulnerability to an adversary. Considering all facets at once makes the ordering problem exponentially harder. We therefore simplify the problem by focusing solely on comparing protocols based on their susceptibility to attack. Towards this goal, we introduce a preorder and equivalence relation over Copland attestation protocols where a better protocol increases adversary constraint. Our formally-modeled, Coq-based solution includes verified properties of the adversary-constrained preorder and equivalence relations for Copland protocols, demonstrated on representative examples to provably ensure correct behavior.
+A key facet of the negotiation routine is attestation protocol selection where selecting the best attestation protocol from among many poses a challenging problem. This difficulty could be attributed to situational nuances that impact an ordering and the variety of attestation scenarios that exist. To further complicate the problem, various dimensions for protocol analysis arise such as a protocol's complexity, its resource consumption, or its vulnerability to an adversary. Considering all facets at once makes the ordering problem exponentially more difficult. We therefore simplify the problem by focusing solely on comparing protocols based on their susceptibility to attack. Towards this goal, we introduce an equivalence and partial order relations over Copland attestation protocols where a better protocol increases the minimal work required of an active adversary to thwart an appraiser. Our formally-modeled, Coq-based solution includes verified properties of the adversary-constrained ordering relations for Copland protocols. Furthermore we applied our ordering scheme to representative examples to demonstrate its accuracy and efficacy.
 
-This emerging adversary-constrained protocol ordering requires a few key assumptions. First, we assume an adversary will always choose the easiest attack to thwart an appraiser. Therefore, a better protocol increases the demands of an active adversary by making the easiest attack more difficult.  Additionally, if there are multiple measurements, we assume that the adversary goes undetected at the final measurement event, implying that the generated evidence passes appraisal when, in reality, the system has been manipulated by an adversary. When defining the systems, we assume there is some root of trust, such as a trusted platform module (TPM), which cannot be attacked by an active adversary. To make the analysis more interesting, we do not adopt Rowe's recent or deep theorem \cite{Rowe:2016:Confining} therefore allowing an adversary to perform recent manipulations of measured components up to a root of trust. If we did adopt the recent or deep theorem, attack graphs reveal an adversary cannot perform any attacks thus making the ordering trivial.
-%Additionally, we adopt part of Rowe's recent or deep theorem \cite{Rowe:2016:Confining}, assuming a more difficult attack requires an adversary to perform either a recent or deep system manipulation. This means an attack is more difficult if the adversary is required to manipulate a component in a time-constrained manner or a component that is closer to a root of trust. Finally,
+This emerging adversary-constrained protocol ordering requires a few key assumptions. First, we assume an adversary will always choose the easiest attack to thwart an appraiser. Therefore, a better protocol increases the demands of an active adversary by making the easiest attack more difficult. Additionally, if there are multiple measurements, we assume that the adversary goes undetected at the final measurement event, implying that the generated evidence passes appraisal when, in reality, the system is in a malicious state. When defining the systems, we assume there is some root of trust, such as a trusted platform module (TPM), which cannot be attacked by an active adversary.
 
-It is important to note this analysis is agnostic of the identity of adversary events and instead uses an abstract notion of the event to further focus the problem. That is, our aim is not to quantify the effort of an attack but rather determine if one can manipulate protocols to make existing attacks more difficult or altogether nonexistent. By enforcing an abstract labeling scheme, we are able to compare adversary events without assigning value to the event itself. 
+Our analysis relies solely on the structure of possible attacks and is agnostic to the specific details of how an adversary can corrupt or repair system components as required by an attack. We instead use an abstract notion of events to further focus the problem. That is, our aim is not to quantify the effort of any specific corruption or repair event but rather determine if one can manipulate protocols to make existing adversary events more difficult or altogether nonexistent. By enforcing an abstract labeling scheme, we are able to compare adversary events without assigning value to the event itself.
 
 Considering these assumptions, the formalized model and subsequent analysis reveal the following two important principles of an adversary-constrained protocol ordering:  
 
